# byakugan

./: .gitignore  README.md  commits.ps1  pyproject.toml
docs/: ARCHITECTURE.md  CAPTURE_WORKFLOW.md  NCTECH_CAPTURE_WORKFLOW.md
src/byakugan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/byakugan_app/: __main__.py  logging.py  main.py
src/byakugan_app/io/: __init__.py  capture_sequence.py  depth_utils.py  loader.py  nctech_capture.py  panorama_processing.py  raw_capture.py
src/byakugan_app/math/: __init__.py  geodesy.py  geometry.py  multiview.py
src/byakugan_app/models/: camera_pose.py  panorama_state.py  selection.py
src/byakugan_app/ui/: depth_generation_dialog.py  main_window.py  measurement_table_model.py  theme.py
src/byakugan_app/viewer/: panorama_widget.py
src/byakugan_app/workers/: task_runner.py
tests/: test_capture_sequence.py  test_depth_utils.py  test_geometry.py  test_multiview.py  test_nctech_capture.py  test_raw_capture.py  test_selection.py
