[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byakugan"
version = "0.1.0"
description = "Desktop 360 panorama georeferencing viewer"
authors = [{ name = "Byakugan Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.5",
  "PyOpenGL>=3.1.6",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "scipy>=1.11",
  "pyproj>=3.6",
  "Pillow>=9.5",
  "loguru>=0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-qt>=4.2",
  "pytest-cov>=4.1",
  "mypy>=1.5",
  "black>=23.7"
]

[project.scripts]
byakugan = "byakugan_app.__main__:main"

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
